src/test/deca/syntax/valid/sansObjet/23_print_null.deca
// Description:
//    tests de print avec \n
//
// Resultats:
//    Print rien
//
// Historique:
//    cree le 10/01/2020


{
print(null);
println(null);
}
