src/test/deca/syntax/invalid/sansObjet/main_sans_fini.deca
/* Description:
    tests de programme lexi correct, syntax incorrect (bloc non terminee)

 Resultats:
    ligne 12: Erreur, bloc non terminee

 Historique:
    cree le 10/01/2020
*/
{
println(1234567890);
